adding background and logo section

--- a/index.html
+++ b/index.html
@@ -8,6 +8,24 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="login">
+        <div class="background">
+            <div class="opacity_area">
+                <div class="bg_logo"></div>
+                <div class="logo_typo">
+                    <div><img class="logo" src="./img/odin-lined.png" alt=""></div>
+                    <div>
+                        <h1 class="typo">Odin</h1>
+                    </div>
+                </div>
+            </div>
+        </div>
+            <img class="bg_image" src="./img/plant_image.jpg" alt="plant_image">
+        <div class="form">
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
+    </div>
 </body>
 </html>
