--- a/index.html
+++ b/index.html
@@ -13,18 +13,63 @@
             <div class="opacity_area">
                 <div class="bg_logo"></div>
                 <div class="logo_typo">
-                    <div><img class="logo" src="./img/odin-lined.png" alt=""></div>
+                    <div>
+                        <img class="logo" src="./img/odin-lined.png" alt="">
+                    </div>
                     <div>
                         <h1 class="typo">Odin</h1>
                     </div>
                 </div>
             </div>
-        </div>
             <img class="bg_image" src="./img/plant_image.jpg" alt="plant_image">
+        </div>
         <div class="form">
-            <div></div>
-            <div></div>
-            <div></div>
+            <div class="back_section">
+                <div><p>This is not a real online service! You know you need something like this in your life to help you realize your deepest dreams. Sign up now to get started</p>
+                <p>You know you want to.</p></div>
+            </div>
+            <div class="front_section">
+            <form action="">
+                <legend>Let's do this!</legend>
+                <fieldset>
+                    <div>
+                        <label for="first_name">First Name</label><br>
+                        <input type="text" id="first_name" name="first_name">
+                    </div>
+
+                    <div>
+                        <label for="last_name">Last Name</label><br>
+                        <input type="text" name="last_name" id="last_name">
+                    </div>
+
+                    <div>
+                        <label for="email">Email</label><br>
+                        <input type="email" name="email" id="email">
+                    </div>
+
+                    <div>
+                        <label for="phone_number">Phone Number</label><br>
+                        <input type="tel" name="phone_number" id="phone_number">
+                    </div>
+
+                    <div>
+                        <label for="password">Password</label><br>
+                        <input type="password" name="password" id="password">
+                    </div>
+
+                    <div>
+                        <label for="confirm_password">Confirm Password</label><br>
+                        <input type="password" name="confirm_password" id="confirm_password">
+                    </div>
+
+                </fieldset>
+            </form>
+            </div>
+            <div class="back_section">
+                <button>Create Account</button>
+                <div><p>Already have an account? <a href="Log In">Log In</a></p>
+                </div>
+            </div>
         </div>
     </div>
 </body>
