--- a/index.html
+++ b/index.html
@@ -25,49 +25,54 @@
         </div>
         <div class="form">
             <div class="back_section">
-                <div><p>This is not a real online service! You know you need something like this in your life to help you realize your deepest dreams. Sign up now to get started</p>
-                <p>You know you want to.</p></div>
+                <div class="text_box"><p class="form_text">This is not a real online service! You know you need something like this in your life to help you realize your deepest dreams.</p>
+                <p class="form_text">Sign up now to get started</p>
+                <p class="form_text">You know you want to.</p></div>
             </div>
             <div class="front_section">
             <form action="">
                 <legend>Let's do this!</legend>
                 <fieldset>
-                    <div>
-                        <label for="first_name">First Name</label><br>
-                        <input type="text" id="first_name" name="first_name">
+                    <div class="column_input">
+                        <div>
+                            <label for="first_name">First Name</label><br>
+                            <input type="text" id="first_name" name="first_name" required>
+                        </div>
+
+                        <div>
+                            <label for="email">Email</label><br>
+                            <input type="email" name="email" id="email" required>
+                        </div>
+
+                        <div>
+                            <label for="password">Password</label><br>
+                            <input type="password" name="password" id="password" required>
+                        </div>
                     </div>
 
-                    <div>
-                        <label for="last_name">Last Name</label><br>
-                        <input type="text" name="last_name" id="last_name">
-                    </div>
-
-                    <div>
-                        <label for="email">Email</label><br>
-                        <input type="email" name="email" id="email">
-                    </div>
-
-                    <div>
-                        <label for="phone_number">Phone Number</label><br>
-                        <input type="tel" name="phone_number" id="phone_number">
-                    </div>
-
-                    <div>
-                        <label for="password">Password</label><br>
-                        <input type="password" name="password" id="password">
-                    </div>
-
-                    <div>
-                        <label for="confirm_password">Confirm Password</label><br>
-                        <input type="password" name="confirm_password" id="confirm_password">
+                    <div class="column_input">
+                        <div>
+                            <label for="last_name">Last Name</label><br>
+                            <input type="text" name="last_name" id="last_name" required>
+                        </div>
+                    
+                        <div>
+                            <label for="phone_number">Phone Number</label><br>
+                            <input type="tel" name="phone_number" id="phone_number">
+                        </div>
+                    
+                        <div>
+                            <label for="confirm_password">Confirm Password</label><br>
+                            <input type="password" name="confirm_password" id="confirm_password" required>
+                        </div>
                     </div>
 
                 </fieldset>
-            </form>
+                </form>
             </div>
             <div class="back_section">
-                <button>Create Account</button>
-                <div><p>Already have an account? <a href="Log In">Log In</a></p>
+                <div><button>Create Account</button></div>
+                <div><p class="form_text">Already have an account? <a href="Log In">Log In</a></p>
                 </div>
             </div>
         </div>
